[package]
name = "riiman"
version = "0.1.0"
authors = ["Thomas Bell <github.com/bell345>"]
license = "MIT"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.2" }
egui_extras = { version = "0.27.2", features = ["all_loaders", "default"] }
egui-modal = "0.3.6"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0"
built = { version = "0.7.2", features = ["chrono"] }
serde = { version = "1.0", features = ["derive", "alloc", "std"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "fast-rng", "serde"] }
tokio = { version = "1.37", features = ["full"] }
rfd = "0.14.1"
dashmap = { version = "5.5", features = ["serde"] }
poll-promise = { version = "0.3.0", features = ["tokio"] }
paste = "1.0"
mime_guess = "2.0"
rand = "0.8"
magick_rust = "0.21.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.59"
rand_seeder = "0.2.3"

[build-dependencies]
built = { version = "0.7.2", features = ["chrono", "semver", "git2"] }
