[package]
name = "riiman"
version = "0.1.0"
authors = ["Thomas Bell <github.com/bell345>"]
license = "MIT"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# rust quality-of-life
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.82"
built = { version = "0.7.2", features = ["chrono"] }
thiserror = "1.0.59"
paste = "1.0.14"
derive_more = { version = "0.99.17", features = ["display"] }
itertools = "0.12.1"

# gui
eframe = { version = "0.27.2", features = ["persistence"] }
egui_extras = { version = "0.27.2", features = ["all_loaders", "default"] }
egui-modal = "0.3.6"
rfd = "0.14.1"

# get theme info
[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["UI_ViewManagement"] }

# async and concurrency
dashmap = { version = "5.5.3", features = ["serde"] }
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
moka = { version = "0.12.7", features = ["sync"] }
crossbeam-queue = "0.3.11"

# data structures + serialisation
serde = { version = "1.0.200", features = ["derive", "alloc", "std"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }

# image manip
magick_rust = "0.21.0"

# speculative/demo dependencies
mime_guess = "2.0.4"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
rand_seeder = "0.2.3"
regex = "1.10.4"
serde_regex = "1.1.0"

[build-dependencies]
built = { version = "0.7.2", features = ["chrono", "semver", "git2"] }
