[package]
name = "riiman"
version = "0.1.0"
authors = ["Thomas Bell <github.com/bell345>"]
license = "MIT"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# rust quality-of-life
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0"
built = { version = "0.7.2", features = ["chrono"] }
thiserror = "1.0"
paste = "1.0"
derive_more = { version = "0.99.17", features = ["display"] }
itertools = "0.13.0"
ordered-float = { version = "4.2", features = ["serde"] }
strum = { version = "0.26.2", features = ["derive"] }

# running scripts
tempfile = "3.10"

# gui
eframe = { version = "0.27.2", features = ["persistence"] }
egui_extras = { version = "0.27.2", features = ["svg", "datepicker", "syntect"] }
egui-modal = "0.3.6"
rfd = "0.14.1"

# async and concurrency
dashmap = { version = "5.5", features = ["serde"] }
poll-promise = { version = "0.3.0", features = ["tokio"] }
tokio = { version = "1.37", features = ["full"] }
moka = { version = "0.12.7", features = ["sync"] }
crossbeam-queue = "0.3.11"

# data structures + serialisation
serde = { version = "1.0", features = ["derive", "alloc", "std"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "fast-rng", "serde"] }
sha2 = "0.10.8"
indexmap = "2.2"
base16ct = { version = "0.2.0", features = ["alloc"] }
relativetime = { version = "0.1.4", features = ["chrono"] }
url = "2.5"

# text manip
nucleo-matcher = "0.3.1"

# image manip
magick_rust = "0.21.0"

# speculative/demo dependencies
mime_guess = "2.0"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
rand_seeder = "0.2.3"
regex = "1.10"
serde_regex = "1.1"

# get theme info
[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["UI_ViewManagement"] }

[build-dependencies]
built = { version = "0.7.2", features = ["chrono", "semver", "git2"] }

[lints.clippy]
pedantic = "warn"
redundant_closure_for_method_calls = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
